Applied JWT Auth

--- a/backend/views/signUp.ejs
+++ b/backend/views/signUp.ejs
@@ -3,24 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <title>Sign Up</title>
-    <!-- <link rel="stylesheet" href="/styles/sign-log.css" /> -->
+    <link rel="stylesheet" href="/styles/sign-log.css" />
   </head>
   <body>
 
     <!-- Display validation errors -->
-    <!-- <% if (typeof errors !== 'undefined' && errors.length > 0) { %>
+    <% if (typeof errors !== 'undefined' && errors.length > 0) { %>
       <ul>
         <% errors.forEach(function(error) { %>
         <li style="color: red"><%= error.msg %></li>
         <% }); %>
       </ul>
-      <% } %> -->
+      <% } %>
 
     
     <div class="container">
       <h1>Sign Up</h1>
 
-      <form action="/sign-up" method="POST">
+      <form action="/signup" method="POST">
         <div>
           <label for="firstname">First Name:</label>
           <input type="text" id="firstname" name="firstname" required />
@@ -61,7 +61,9 @@
         </div>
       </form>
 
-      <p>Have an account? <a href="/log-in">Log In here</a></p>
+      <p>Have an account? <a href="/login">Log In here</a></p>
+      <p>Return back <a href="/">Home</a></p>
+
     </div>
   </body>
 </html>
