--- a/backend/views/home.ejs
+++ b/backend/views/home.ejs
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div class="container">
-      <a href="/sign-up"><button>Sign Up</button></a>
-      <a href="/log-in"><button>Log In</button></a>
+      <a href="/signup"><button>Sign Up</button></a>
+      <a href="/login"><button>Log In</button></a>
   </div>
   </body>
 </html>
