--- a/backend/views/logIn.ejs
+++ b/backend/views/logIn.ejs
@@ -8,13 +8,23 @@
   </head>
   <body>
 
+
+    <!-- Display validation errors -->
+    <% if (typeof errors !== 'undefined' && errors.length > 0) { %>
+      <ul>
+        <% errors.forEach(function(error) { %>
+        <li style="color: red"><%= error.msg %></li>
+        <% }); %>
+      </ul>
+      <% } %>
+
     <div class="container">
       <h1>Log In</h1>
       
-    <form action="/log-in" method="POST">
+    <form action="/login" method="POST">
       <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required />
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
       </div>
 
       <div>
@@ -27,7 +37,7 @@
       </div>
     </form>
 
-    <p>Don't have an account? <a href="/sign-up">Sign up here</a></p>
+    <p>Don't have an account? <a href="/signup">Sign up here</a></p>
     </div>
 
     
